# QvPlugins

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
QvPlugin-Command/: CMakeLists.txt  CommandPlugin.cpp  CommandPlugin.hpp
QvPlugin-Command/core/: CommandConfig.hpp  EventHandler.cpp  EventHandler.hpp
QvPlugin-Command/ui/: CommandPluginSettings.cpp  CommandPluginSettings.hpp  GUIInterface.hpp
QvPlugin-LatencyTest/: BuiltinLatencyTesterPlugin.cpp  BuiltinLatencyTesterPlugin.hpp  CMakeLists.txt
QvPlugin-LatencyTest/cmake/: libuvw.cmake
QvPlugin-LatencyTest/latency/: DNSBase.hpp  ICMPLatencyTester.cpp  ICMPLatencyTester.hpp  TCPLatencyTester.cpp  TCPLatencyTester.hpp
QvPlugin-NaiveProxy/: CMakeLists.txt  SimplePlugin.cpp  SimplePlugin.hpp
QvPlugin-NaiveProxy/core/: Kernel.cpp  Kernel.hpp  Serializer.cpp  Serializer.hpp
QvPlugin-NaiveProxy/ui/: OutboundEditor.cpp  OutboundEditor.hpp  SettingsWidget.cpp  SettingsWidget.hpp  UIInterface.hpp
QvPlugin-Trojan-Go/: CMakeLists.txt  TrojanGoPlugin.cpp  TrojanGoPlugin.hpp
QvPlugin-Trojan-Go/core/: Common.hpp  Kernel.cpp  Kernel.hpp  Serializer.hpp
QvPlugin-Trojan-Go/ui/: GUIInterface.hpp
QvPlugin-Trojan-Go/widgets/: TrojanGoOutboundWidget.cpp  TrojanGoOutboundWidget.hpp  TrojanGoSettingsWidget.cpp  TrojanGoSettingsWidget.hpp
